RESOLVED FIXED308335
On Safari, Settings > Privacy > Manage Website Data > Remove All doesn't remove cross browser PCM entries in PCM database
https://bugs.webkit.org/show_bug.cgi?id=308335
Summary On Safari, Settings > Privacy > Manage Website Data > Remove All doesn't rem...
Pouneh
Reported 2026-02-20 14:30:49 PST
PCM data should be removed when removing website data. With Cross Browser PCM for the Safari default browser campaign, Settings > Privacy > Manage Website Data > Remove All doesn't remove cross browser PCM entries in PCM database.
Attachments
Pouneh
Comment 1 2026-02-20 14:41:55 PST
Pouneh
Comment 2 2026-02-20 14:42:57 PST
EWS
Comment 3 2026-03-09 10:35:30 PDT
Committed 308923@main (59bb58fb6fd4): <https://commits.webkit.org/308923@main> Reviewed commits have been landed. Closing PR #58964 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.