Cherry-pick 59bb58fb6fd4. rdar://172102659

Include PCM domains in website data fetch to fix "Remove All" clearing
    https://bugs.webkit.org/show_bug.cgi?id=308335
    rdar://169487327

    Reviewed by Charlie Wolfe.

    In Safari Campaign, PCM domains were not cleared by "Remove All Website Data" because
    they store only PCM attribution data without traditional website data (cookies, etc.).
    This fix add a query to PCM database for all registrable domains during the website fetch
    operation. This makes PCM-only domains visible in the data list, allowing "Removing All" to
    clear them automatically.

    Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/PrivateClickMeasurement.mm

    * Source/WebKit/NetworkProcess/NetworkProcess.cpp:
    (WebKit::NetworkProcess::fetchWebsiteData):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementDatabase.cpp:
    (WebKit::PCM::Database::fetchRegistrableDomains const):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementDatabase.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementEphemeralStore.cpp:
    (WebKit::PCM::EphemeralStore::fetchRegistrableDomains):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementEphemeralStore.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManager.cpp:
    (WebKit::PrivateClickMeasurementManager::fetchRegistrableDomains):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManager.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManagerInterface.cpp:
    (WebKit::PCM::MessageInfo::encodeReplyImpl):
    (WebKit::PCM::MessageInfo::toStringForTesting::encodeReply):
    (WebKit::PCM::MessageInfo::fetchRegistrableDomains::encodeReply):
    (WebKit::PCM::messageTypeSendsReply):
    (WebKit::PCM::decodeMessageAndSendToManager):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManagerInterface.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManagerProxy.cpp:
    (WebKit::PCM::ReplyCaller<Vector<WebCore::RegistrableDomain>::callReply):
    (WebKit::PCM::ManagerProxy::fetchRegistrableDomains):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManagerProxy.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementPersistentStore.cpp:
    (WebKit::PCM::PersistentStore::fetchRegistrableDomains):
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementPersistentStore.h:
    * Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementStore.h:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/PrivateClickMeasurement.mm:
    (TEST(PrivateClickMeasurement, FetchAndRemoveSafariCampaignDomains)):

    Canonical link: https://commits.webkit.org/308923@main

Identifier: 305413.490@safari-7624-branch